Added service call to retrieve a list of objects
Important note: when retrieving via RestTemplate, use Domain[].class for a list of object rather than just the POJO